--- a/src/css/layerjs.css
+++ b/src/css/layerjs.css
@@ -16,3 +16,21 @@
   width: 0px;
   height: 0px;
 }
+.nativescroll[data-wl-type=layer] {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+  width: initial;
+  height: initial;
+  overflow: auto;
+}
+.nativescroll[data-wl-type=layer] > div{
+  position: relative;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  height: 1000px;
+  overflow: hidden;
+}
