FireFox problem and IE problem Transform isn't set initial isn't know in IE

--- a/src/css/layerjs.css
+++ b/src/css/layerjs.css
@@ -22,7 +22,9 @@
   left: 0px;
   bottom: 0px;
   right: 0px;
+  width: auto;
   width: initial;
+  height: auto;
   height: initial;
   overflow: auto;
 }
