--- a/src/css/layerjs.css
+++ b/src/css/layerjs.css
@@ -1,22 +1,22 @@
-[data-wl-type='stage'] {
+[data-lj-type='stage'] {
   overflow: hidden;
   position: relative;
 }
-[data-wl-type='frame'] {
+[data-lj-type='frame'] {
   position: absolute;
   transform-origin: left top;
   -webkit-transform-origin: left top;
   top: 0px;
   left: 0px;
 }
-[data-wl-type='layer'] {
+[data-lj-type='layer'] {
   position: absolute;
   top: 0px;
   left: 0px;
   width: 0px;
   height: 0px;
 }
-.nativescroll[data-wl-type=layer] {
+.nativescroll[data-lj-type=layer] {
   position: absolute;
   top: 0px;
   left: 0px;
@@ -28,7 +28,7 @@
   height: initial;
   overflow: auto;
 }
-.nativescroll[data-wl-type=layer] > div{
+.nativescroll[data-lj-type=layer] > div{
   position: relative;
   top: 0px;
   left: 0px;
