baseview: added box-sizing:border-box to frames as only this works with the current versions of width(), height(), setWidth() and setHeight()

--- a/src/css/layerjs.css
+++ b/src/css/layerjs.css
@@ -8,6 +8,7 @@
   -webkit-transform-origin: left top;
   top: 0px;
   left: 0px;
+  box-sizing: border-box;
 }
 [data-lj-type='layer'], [lj-type='layer'] {
   position: absolute;
