--- a/examples/grid/your-style0.css
+++ b/examples/grid/your-style0.css
@@ -14,7 +14,7 @@ body {
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.6);
     /*transition: 0.3s;
     width: 40%;*/
     height: 100%;
@@ -22,6 +22,7 @@ body {
     border-radius: 5px;
     text-align: center;
     font-size: 1.8vw;
+    margin: 10px 10px;
 }
 
 .card:hover {
