--- a/examples/grid/your-style0.css
+++ b/examples/grid/your-style0.css
@@ -1,57 +1,56 @@
 html {
   height: 100%;
 }
-
 body {
   width: 100%;
   height: 100%;
   margin: 0px;
   background-color: #fff;
 }
-
-.layer {
-  content: 'l';
+@media screen and (max-width: 750px) {
+  .layer {
+    content: 's';
+    background-color: green;
+  }
 }
-
+@media screen and (min-width: 751px) {
+  .layer {
+    content: 'l';
+  }
+}
 .card {
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.6);
-    /*transition: 0.3s;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.6);
+  /*transition: 0.3s;
     width: 40%;*/
-    height: 100%;
-    width: 100%
-    border-radius: 5px;
-    text-align: center;
-    font-size: 1.8vw;
-    margin: 10px 10px;
-}
-
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-img {
-    border-radius: 5px 5px 0 0;
-    max-width: 100%;
-    max-height: 100%;
-    padding: 0.8vw 0.8vw 0.8vw 0.8vw;
-}
-
-.imgContainer{
+  height: 100%;
   width: 100%;
-  height:50%;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 1.8vw;
+  margin: 10px 10px;
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+img {
+  border-radius: 5px 5px 0 0;
+  max-width: 100%;
+  max-height: 100%;
+  padding: 0.8vw 0.8vw 0.8vw 0.8vw;
+}
+.imgContainer {
+  width: 100%;
+  height: 50%;
   overflow: hidden;
 }
-
 .container {
-    /*padding: 2px 16px;*/
-    width: 100%;
-    height: 50%;
+  /*padding: 2px 16px;*/
+  width: 100%;
+  height: 50%;
 }
-
-p{
+p {
   margin: 0;
 }
-
 a {
   text-decoration: none;
   color: black;
