--- a/src/css/layerjs.css
+++ b/src/css/layerjs.css
@@ -2,6 +2,7 @@
   overflow: hidden;
   position: relative;
 }
+
 [data-lj-type='frame'], [lj-type='frame'] {
   position: absolute;
   transform-origin: left top;
@@ -9,7 +10,9 @@
   top: 0px;
   left: 0px;
   box-sizing: border-box;
+  will-change: transform;
 }
+
 [data-lj-type='layer'], [lj-type='layer'] {
   position: absolute;
   top: 0px;
@@ -18,11 +21,13 @@
   height: 0px;
   z-index: 0;
 }
+
 [data-lj-type='layer'] [data-lj-draggable='true'], [lj-type='layer'] [lj-draggable='true'] {
   cursor: pointer;
   cursor: hand;
   user-select: none
 }
+
 .nativescroll[data-lj-type='layer'], .nativescroll[lj-type='layer'] {
   position: absolute;
   top: 0px;
@@ -34,12 +39,15 @@
   height: auto;
   height: initial;
   overflow: auto;
-  -webkit-overflow-scrolling: touch; /* ios safari needs some extra catering here, otherwise it does not have inertial scrolling */
+  -webkit-overflow-scrolling: touch;
+  /* ios safari needs some extra catering here, otherwise it does not have inertial scrolling */
 }
+
 .nativescroll[data-lj-type='layer']>div, .nativescroll[lj-type='layer']>div {
   position: relative;
   top: 0px;
   left: 0px;
   right: 0px;
   overflow: hidden;
+  will-change: transform;
 }
